; ModuleID = '/home/carl/AnghaBench/RetroArch/ctr/extr_ctr_memory.c_ctr_get_stack_usage.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ctr/extr_ctr_memory.c_ctr_get_stack_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__stacksize__ = external dso_local global i64, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ctr_get_stack_usage() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @ctr_get_stack_free()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* @__stacksize__, align 8
  %4 = load i64, i64* %1, align 8
  %5 = icmp sgt i64 %3, %4
  br i1 %5, label %6, label %10

6:                                                ; preds = %0
  %7 = load i64, i64* @__stacksize__, align 8
  %8 = load i64, i64* %1, align 8
  %9 = sub nsw i64 %7, %8
  br label %11

10:                                               ; preds = %0
  br label %11

11:                                               ; preds = %10, %6
  %12 = phi i64 [ %9, %6 ], [ 0, %10 ]
  ret i64 %12
}

declare dso_local i64 @ctr_get_stack_free(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
